--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -60,8 +60,7 @@
     List<MenuItem> menuItems =
     [
         new("Home", ""),
-        new("Tags", "tags"),
-        new("", WebsiteKeys.GitHubRepo, Svg.Icons.Github)
+        new("Tags", "tags")
     ];
    
     
