--- a/Components/Pages/Blog.razor
+++ b/Components/Pages/Blog.razor
@@ -45,6 +45,7 @@
                 </div>
             </div>
         </header>
+    </div>
         <div class="grid-rows-[auto_1fr] divide-y  pb-8 divide-gray-700 xl:grid xl:grid-cols-4 xl:gap-x-6 xl:divide-y-0">
 
             <dl class="pb-10 pt-6 xl:border-b  xl:pt-11 xl:border-gray-700">
