--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -4,6 +4,7 @@
   margin: 0px auto;
   margin-top: 4rem;
 }
+
 .greet-main {
   width: 100%;
   padding: 20px 10px;
@@ -18,12 +19,14 @@
 
 .greeting-main {
   display: flex;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
 }
 
 .greeting-main > * {
   flex: 1;
   margin-bottom: 30px;
 }
+
 .button-greeting-div {
   display: flex;
   margin-top: 20px;
@@ -73,6 +76,7 @@
     font-size: 20px;
   }
 }
+
 @media (max-width: 768px) {
   .button-greeting-div {
     justify-content: space-around;
@@ -100,5 +104,32 @@
     width: 100%;
     display: flex;
     justify-content: center;
+  }
+
+  .greeting-text-div {
+    max-width: 90%; /* Increase text div width for better readability */
+    margin-left: 5%;
+  }
+
+  .greeting-image-div {
+    max-width: 100%; /* Allow image to take full width */
+    margin-right: 0;
+    margin-top: 20px; /* Add margin for spacing */
+  }
+}
+
+@media (max-width: 480px) {
+  .greeting-text {
+    font-size: 24px;
+  }
+  .greeting-nickname {
+    font-size: 20px;
+  }
+  .greeting-text-p {
+    font-size: 14px;
+  }
+  .greeting-text-div {
+    max-width: 100%;
+    margin-left: 0;
   }
 }
