--- a/src/pages/education/EducationComponent.css
+++ b/src/pages/education/EducationComponent.css
@@ -9,6 +9,7 @@
 
 .heading-div {
   display: flex;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
 }
 
 .heading-div > * {
@@ -67,5 +68,27 @@
 
   .heading-div {
     flex-direction: column;
+    align-items: center; /* Center items in column layout */
+  }
+
+  .basic-education {
+    margin-left: 2%;
+    margin-right: 2%; /* Reduce margins for smaller screens */
+  }
+}
+
+@media (max-width: 480px) {
+  .heading-text {
+    font-size: 24px;
+    margin-top: 10px;
+  }
+
+  .heading-sub-text {
+    font-size: 18px;
+  }
+
+  .basic-education {
+    margin-left: 1%;
+    margin-right: 1%; /* Further reduce margins for very small screens */
   }
 }
